--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2875,7 +2875,7 @@ allow  a better exchange and reuse of OMS. Eventually, this will also lead to be
 %
 This clause is informative. Its purpose is to briefly describe the 
 %purposes of the Distributed Ontology, Modeling and Specification Language (DOL) and 
-the overall guiding principles and constraints of DOL's syntax and semantics.
+ overall guiding principles and constraints of DOL's syntax and semantics.
 %
 %\todonote{add somewhere: DOL is a meta language and can be used with OMS languages of any expressiveness. As a Meta-language, DOL provides a framework for combining and relating OMS written in specific OMS languages.
 %However, DOL cannot be used for writing new basic OMS.}
