--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1009,7 +1009,7 @@ This has been left for future work.
 %	
 6.7.(f)	& 
 Proposals should discuss the role of APIs.	&
-The role of APIs is discussed in annex \ref{a:tools}. 
+The role of APIs is discussed in section \ref{c:APIs}. 
    \\ \hline
 %	
 6.7.(g)	& 
@@ -6488,7 +6488,7 @@ translations as Hets (indeed, Hets is used for analysing DOL files).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
 OMS in various languages via a web frontend, 
-see \url{https://ontohub.org}, \url{https://modelhub.info} and \url{https://spechub.org}.
+see \url{https://ontohub.org}, \url{https://model-hub.org} and \url{https://spechub.org}.
 Ontohub/Modelhub/Spechub is open source under GNU AGPL 3.0 license,  the sources are available at the following URL 
 \url{https://github.com/ontohub/ontohub}.
 
@@ -6557,6 +6557,15 @@ on the MIME type of the request, under this URL, the raw OMS file
 will be available, but also a HTML version for display in a browser, 
 an XML and a JSON version for processing with tools.
 
+\sclause{APIs}\label{c:APIs}
+
+Both Hets and Ontohub/Modelhub/Spechub provide APIs for the interchange
+with other tools. Ontohub/Modelhub/Spechub also provides an API for
+exchange with other instances, so that e.g.\ Ontohub and Modelhub
+can exchange information about available repositories and their OMS.
+
+In the future, these APIs shall be aligned with OMG's standardization
+effort API4KB.
 
 %\infannex{Bibliography}
 \clearpage
