selected w.a. cocones and amalgamations

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4465,7 +4465,9 @@ for each edge $e:p\rightarrow q$, $M_p = M_q\forget{D(e)}$.
 $(\Sigma,(\mu_j)_{j\in|J|})$ over the network $D\map{J}{\Sign^I}$ is
 called \emph{weakly amalgamable} if it is mapped to a weak limit by $\Mod$.
 For models, this means that for each $D$-compatible family of
-models $(M_j)_{j\in|J|}$, there is a $\Sigma$-model $M$ with
+models $(M_j)_{j\in|J|}$, there is a $\Sigma$-model $M$, called an amalgamation of 
+ $(M_j)_{j\in|J|}$,
+with
 $M\forget{\mu_j}=M_j$ ($j\in|J|$), and similarly for model morphisms.
  If this model is unique, the cocone
 is called \emph{amalgamable}. 
@@ -4474,6 +4476,18 @@ amalgamation} if (finite) colimit cocones are (weakly) amalgamable.
 Finally, $I$ is called \emph{(weakly) semi-exact} if 
 it has pushouts and admits (weak) amalgamation for these.
 \end{definition}
+
+\cite{CM2008} studies conditions for existence of weakly amalgamable cocones
+in a heterogeneous setting, where the network consists of signatures (or theories)
+in different logics. Since a network admits more than one weakly amalgamable cocone,
+we assume selection operations both for the weakly amalgamable cocone of a network 
+and for the (potentially non-unique) amalgamation of a family of models compatible with the
+network. This allows us to define a function
+$colimit$ taking as argument a network of heterogeneous signatures and
+returning the selected weakly amalgamable cocone for the network and
+a function $\oplus$ taking as argument a family of models compatible with a network
+and returning its selected amalgamation.
+
 
 \sclause{Semantics of DOL language constructs}\label{c:direct-sematics}
 
