semantics of combinations

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4601,6 +4601,7 @@ $$sem(\syntax{PrefixMap, LibraryDefn}) = (\Gamma', L')$$
 \noindent where 
  $sem(\syntax{PrefixMap}) = PMap$ and
 $sem(\Gamma_\emptyset, L_0, PMap, \syntax{LibraryDefn}) = (\Gamma', L')$. 
+\todonote{default logic?}
 
 $$sem^T(\syntax{OMSInConformingLanguage}) = (\{ \syntax{IRI} \mapsto (I, \Sigma, \Delta) \}, L)$$
 \noindent where $sem(\Gamma_\emptyset, L, \syntax{OMSInConformingLanguage}) = (I,  \Sigma, \Delta)$,
@@ -4973,16 +4974,16 @@ $$sem^T(\Gamma, L, \syntax{combination, Network})= (\cI,\Sigma,\Delta)$$
 
 where 
 $sem^T(\Gamma, L, PMap, \syntax{Network}) = G$ and
-$(\Sigma, \Delta)$ is the colimit of $G$.
+$(\Sigma, \Delta) = colimit(G)$.
 This is defined only if all ontologies in \syntax{Network} are flattenable. 
 
 $$sem^M(\Gamma, L, \syntax{combination, Network})= (\cI,\Sigma,\cM)$$
 
 where 
-$sem^M(\Gamma, L, PMap, \syntax{Network}) = (G, \{\cM_i\}_{i\in Nodes(G)})$,
+$sem^M(\Gamma, L, PMap, \syntax{Network}) = G$,
 $\Sigma$ is the colimit of $G$
-and 
-$\cM =  \oplus \{\cM_i\}_{i\in Nodes(G)}$. \ednote{This should be spelled out.}
+and \\
+$\cM =  \{ \oplus \{M_i\}_{i \in Nodes(G)} \mid  \{M_i\}_{i \in Nodes(G)} \text{ is a family of models compatible with } G \}$. 
 
 
 %Application
